exp/osubench/theta: node count from target name

--- a/exp/osubench/theta/Makefile
+++ b/exp/osubench/theta/Makefile
@@ -4,10 +4,18 @@ endif
 
 CASPER_UTILS_ROOT:=$(abspath ../../..)
 
-NODES?=2
-NODES_JOB?=$(NODES)
-MAP_BY?=node
 NOLOCAL?=1
+
+DBG_Q_MAX_NODES:=8
+MAIN_Q_MIN_NODES:=128
+DEBUG_Q=debug-cache-quad
+QUEUE?=
+
+ifeq ($(QUEUE),debug)
+QUEUE_ARG:=$(DEBUG_Q)
+else
+QUEUE_ARG:=$(QUEUE)
+endif
 
 # By default, include all except one-sided benchmarks (observed hang from
 # within prefix, although need to retest), and exclude multi-threaded
@@ -23,20 +31,11 @@ BLOCK?=
 
 # UCX and OFI don't work; builtin uGNI and builtin TCP do work
 DATS=\
-     $(DATA_DIR)/bench-prefix-n-$(NODES)-map-by-$(MAP_BY)-default.log
-# TODO: multiple concurrent targets not supported, b/c need to block qsub
-#     $(DATA_DIR)/bench-prefix-n-$(NODES)-map-by-$(MAP_BY)-tcp.log
+     $(DATA_DIR)/osubench_ranks-2_tpn-1_mapby-node_tp-default.log
+# TODO: concurrent job targets not supported, b/c need to block qsub
+#     $(DATA_DIR)/osubench_ranks-2_tpn-1_mapby-node_tp-tcp.log
 
 all: $(DATS)
-
-# if NODES <= 8 (debug queue), then allow only one job at a time
-ifneq ($(filter 1 2 3 4 5 6 7 8,$(NODES)),)
-.NOTPARALLEL:
-endif
-
-define gen-map-by
-$(subst -,:,$(1))$(if $(NOLOCAL),:NOLOCAL)
-endef
 
 $(DATA_DIR)/:
 	mkdir -p "$@"
@@ -61,39 +60,74 @@ endif
 # and the recipe should extract it from there.
 
 # default should be equivalent to ugni
-$(DATA_DIR)/bench-prefix-n-$(NODES)-map-by-$(MAP_BY)-default.log: \
+$(DATA_DIR)/osubench_%_tp-default.log: \
 	MPIRUN_TP_ARGS+=
-$(DATA_DIR)/bench-prefix-n-$(NODES)-map-by-$(MAP_BY)-ugni.log: \
+$(DATA_DIR)/osubench_%_tp-ugni.log: \
 	MPIRUN_TP_ARGS+=--mca pml_ob1_priority 100
-$(DATA_DIR)/bench-prefix-n-$(NODES)-map-by-$(MAP_BY)-ucx.log: \
+$(DATA_DIR)/osubench_%_tp-ucx.log: \
 	MPIRUN_TP_ARGS+=\
 		--mca pml ucx \
 		--mca pml_ucx_priority 100
-$(DATA_DIR)/bench-prefix-n-$(NODES)-map-by-$(MAP_BY)-ofi.log: \
+$(DATA_DIR)/osubench_%_tp-ofi.log: \
 	MPIRUN_TP_ARGS+=\
 		--mca mtl ofi \
 		--mca mtl_ofi_priority 100 \
 		--mca pml_ucx_priority 0
 # NOTE: ipogif0 iface has two addresses and only 10.128.x.x/14 is pingable,
 # must use exclude directive (since 10.128.0.0/14 mask matches both)
-$(DATA_DIR)/bench-prefix-n-$(NODES)-map-by-$(MAP_BY)-tcp.log: \
+$(DATA_DIR)/osubench_%_tp-tcp.log: \
 	MPIRUN_TP_ARGS+=\
 		--mca btl self,tcp \
 		--mca btl_tcp_if_exclude lo,10.237.0.0/16 \
 		--mca oob_tcp_if_exclude lo,10.237.0.0/16
 
-DEBUG_Q=debug-cache-quad
-QUEUE?=
-
-define make-q-arg
-$(if $(1),-q $(1),$$([[ "$(NODES_JOB)" -lt 128 ]] && echo -q $(DEBUG_Q)))
+define calc
+$(strip $(shell echo '$(1)' | bc))
 endef
 
+define is-dbg-q
+$(findstring debug,$(QUEUE_ARG))
+endef
+
+# dat/foo+bar --> foo
+define first-tgt
+$(firstword $(subst +, ,$(firstword $(1))))
+endef
+
+# tgt-extract(key, target_name) -> value
+define tgt-extract
+$(strip $(subst $(1)-,,$(filter $(1)-%,$(subst _, ,$(subst ., ,$(2))))))
+endef
+
+define gen-map-by
+$(subst -,:,$(1))$(if $(NOLOCAL),:NOLOCAL)
+endef
+
+# tgt-nodes(target_name) -> node count (from: ranks/tasks_per_node)
+define tgt-nodes
+$(call calc,$(call tgt-extract,ranks,$(1)) / $(call tgt-extract,tpn,$(1)))
+endef
+define cap-job-nodes
+$(if $(call is-dbg-q),\
+	$(if $(filter 1,$(call calc,$(1) <= $(DBG_Q_MAX_NODES))),\
+		$(1),$(error Debug queue allows only up to $(DBG_Q_MAX_NODES) nodes)),\
+	$(if $(filter 1,$(call calc,$(MAIN_Q_MIN_NODES) < $(1))),\
+		$(1),$(MAIN_Q_MIN_NODES)))
+endef
+define job-nodes
+$(strip $(call cap-job-nodes,$(call tgt-nodes,$(call first-tgt,$(1)))))
+endef
+
+# Only one job at a time allowed in debug queue
+ifneq ($(call is-dbg-q),)
+.NOTPARALLEL:
+endif
+
 ifeq ($(IN),1)
-$(DATA_DIR)/bench-prefix-n-$(NODES)-map-by-$(MAP_BY)-%.log: | $(DATA_DIR)/
+$(DATA_DIR)/osubench_%.log: | $(DATA_DIR)/
 	$(EPREFIX)/usr/bin/osubench '$(PATTERN)' '$(PATTERN_EXCLUDE)' \
-		mpirun -n "$(NODES)" \
-		--map-by "$(call gen-map-by,$(MAP_BY))" \
+		mpirun -n "$(call tgt-extract,ranks,$*)" \
+		--map-by "$(call gen-map-by,$(call tgt-extract,mapby,$*))" \
 		$(MPIRUN_ARGS) $(MPIRUN_TP_ARGS) | tee "$@"
 # within the job, must run each target sequentially (nodes are shared)
 .NOTPARALLEL:
@@ -102,18 +136,18 @@ else # IN=0
 $(DATA_DIR)/%: | $(DATA_DIR)/
 	rm -f $@.{cobaltlog,output,error}
 	touch $@.{cobaltlog,output,error}
-	qsub -O "$@" -n "$(NODES_JOB)" -t "$(MAX_TIME_MIN)" -A "$(ACCOUNT)" \
-		$(call make-q-arg,$(QUEUE)) \
+	qsub -O "$@" -n "$(or $(NODES),$(call job-nodes,$*))" \
+		-t "$(MAX_TIME_MIN)" -A "$(ACCOUNT)" \
+		$(if $(QUEUE_ARG),-q $(QUEUE_ARG)) \
 		$(EPREFIX)/startprefix -c "env \
 		PATTERN='$(PATTERN)' PATTERN_EXCLUDE='$(PATTERN_EXCLUDE)' \
-		make -C $(CURDIR) IN=1 NODES=$(NODES) MAP_BY=$(MAP_BY) \
+		make -C $(CURDIR) IN=1 DATA_DIR=$(DATA_DIR) \
 		MPIRUN_ARGS='$(MPIRUN_ARGS)' VERBOSE=$(VERBOSE) \
-		DATA_DIR=$(DATA_DIR) \
 		$(patsubst %,$(DATA_DIR)/%,$(subst +, ,$*))"
 	$(if $(BLOCK),,exit 0 &&) tail -f $@.{cobaltlog,output,error}
 
 job:
-	qsub -n "$(NODES_JOB)" -t "$(MAX_TIME_MIN)" -A "$(ACCOUNT)" \
+	qsub -n "$(or $(NODES),2)" -t "$(MAX_TIME_MIN)" -A "$(ACCOUNT)" \
 		$(call make-q-arg,$(QUEUE)) $(QSUB_ARGS) --attr enable_ssh=1 -I
 .PHONY: job
 endif # IN
