exp/ch/theta: support multi-target jobs

--- a/exp/cahn-hilliard/theta/Makefile
+++ b/exp/cahn-hilliard/theta/Makefile
@@ -6,110 +6,271 @@ endif
 
 endif # MAKECMDGOALS
 
-MCA_ARGS:=--mca btl self,ugni --mca btl_tcp_if_include 10.128.0.0/16
-
-# only one job allowed in the debug queue.
-# TODO: serialize only debug queue targets, not production queue targets
-.NOTPARALLEL:
-
-all: dat/test-2-2-node.csv
-
-dat/:
-	mkdir -p $@
-
-times-node: | dat/ \
-	dat/times-32-2-node.csv \
-	dat/times-96-2-node.csv
-
-times-core: | dat/ \
-	dat/times-96-2-core.csv \
-	dat/times-96-4-core.csv \
-	dat/times-96-8-core.csv \
-	dat/times-96-16-core.csv \
-	dat/times-96-32-core.csv \
-	dat/times-96-64-core.csv \
-	dat/times-128-32-core.csv \
-	dat/times-128-48-core.csv \
-	dat/times-128-64-core.csv \
-	dat/times-256-48-core.csv \
-	dat/times-256-64-core.csv \
-	dat/times-512-48-core.csv \
-	dat/times-512-64-core.csv \
-	dat/times-1024-48-core.csv \
-	dat/times-1024-64-core.csv \
-	dat/times-1536-128-core.csv \
-	dat/times-1536-192-core.csv \
-	dat/times-1536-256-core.csv
-
-times-max: \
-	dat/times-2048-256-core.csv \
-	dat/times-2048-320-core.csv
-
-times-ppr-node: | dat/ \
-	dat/times-512-64-ppr-32-node.csv \
-	dat/times-512-128-ppr-16-node.csv \
-	dat/times-512-128-ppr-32-node.csv \
-	dat/times-512-128-ppr-64-node.csv \
-	dat/times-1024-64-ppr-32-node.csv
-
-dat/times-512-%.csv/job: MAX_TIME_MIN=30
-dat/times-1024-%.csv/job: MAX_TIME_MIN=45
-dat/times-%-64-ppr-32-node.csv/job: NODES=2
-dat/times-%-128-ppr-16-node.csv/job: NODES=8
-dat/times-%-128-ppr-32-node.csv/job: NODES=4
-dat/times-%-128-ppr-64-node.csv/job: NODES=2
-dat/times-%-256-ppr-64-node.csv/job: NODES=4
-dat/times-%-512-ppr-64-node.csv/job: NODES=8
-dat/times-%-128-core.csv/job: NODES=2
-dat/times-%-192-core.csv/job: NODES=3
-dat/times-%-256-core.csv/job: NODES=4
-dat/times-%-320-core.csv/job: NODES=5
-dat/times-%-384-core.csv/job: NODES=6
-dat/times-%-512-core.csv/job: NODES=8
-
-# TODO: tasks per node (third arg) is not set
-define run
-	mpirun -n "$(2)" --map-by "$(subst -,:,$(3)):NOLOCAL" $(MCA_ARGS) \
-		env OMP_NUM_THREADS=$(OMP_NUM_THREADS) \
-		bash $(PWD)/fch.sh "$(1)" "$(@)" "0" --elapsed-out "$$@"
-endef
-
-
-define run-rule
-dat/times-%-$(1)-$(2).csv: | dat/
-	$(call run,$$*,$(1),$(2))
-endef
-
-$(foreach rank,2 4 8 16 32 48 64 128 192 256 320 384 512,\
-	$(eval $(call run-rule,$(rank),node))\
-	$(eval $(call run-rule,$(rank),core))\
-	$(eval $(call run-rule,$(rank),ppr-16-node))\
-	$(eval $(call run-rule,$(rank),ppr-32-node))\
-	$(eval $(call run-rule,$(rank),ppr-64-node))\
-)
-
-NODES?=2
-MAX_TIME_MIN?=59
-ACCOUNT?=CASPER
-SSH=
 # Very important to set OMP threads, otherwise it spawns way to many, and the
 # default also varies by rank count -- the default is a mess.
 OMP_NUM_THREADS?=1
 
-DEBUG_Q=debug-cache-quad
+MAX_TIME_MIN?=30
+ACCOUNT?=CASPER
+BLOCK?=
+SSH?=
+NOLOCAL?=1
+SEPARATE_JOBS?=
 
-%/job:
-	rm -f $*.log.{cobaltlog,output,error}
-	touch $*.log.{cobaltlog,output,error}
-	qsub -O "$*.log" -n "$(NODES)" -t "$(MAX_TIME_MIN)" -A "$(ACCOUNT)" \
+# It is not clear how '--map-by core' knows how many slots there
+# are per node, but the setting of MAX_SLOTS_PER_NODE must match
+# whatever '--map-by core' does. We set this var to max physical cores,
+# assuming --map-by core defaults to number of physical cores per node.
+# The value of this variable is ignored by *-ppr-N-* targets, which
+# set the param to N. For other targets, this value determines
+# how many nodes to request (based on how many ranks in the target).
+MAX_SLOTS_PER_NODE?=64
+
+DBG_Q_MAX_NODES:=8
+MAIN_Q_MIN_NODES:=128
+DEBUG_Q=debug-cache-quad
+QUEUE?=
+
+ifeq ($(QUEUE),debug)
+QUEUE_ARG:=$(DEBUG_Q)
+else
+QUEUE_ARG:=$(QUEUE)
+endif
+
+DATA_DIR?=$(firstword $(subst /, ,$(firstword $(MAKECMDGOALS))))
+
+all: ch-core-tiny ch-core-small ch-core-med ch-core-large ch-ppr-node
+
+$(DATA_DIR)/:
+	mkdir -p $@
+
+include ../Makefile
+
+EMPTY:=
+SPACE:= $(EMPTY) $(EMPTY)
+define combine-targets
+$(DATA_DIR)/$(subst $(SPACE),+,$(strip $(foreach s,$(1),$(strip $(s)))))
+endef
+define split-targets
+$(subst +,$(SPACE),$(patsubst $(DATA_DIR)/%,%,$(1)))
+endef
+
+ifeq ($(IN),1)
+define target-set-rule
+$(DATA_DIR)/$(1): $(patsubst %,$(DATA_DIR)/%,$(2))
+endef
+else # IN=0
+ifeq ($(SEPARATE_JOBS),1)
+define target-set-rule
+$(DATA_DIR)/$(1): $(patsubst %,$(DATA_DIR)/%,$(2)) ;
+endef
+else
+define target-set-rule
+$(DATA_DIR)/$(1): DEPS=$(call combine-targets,$(strip $(2)))
+endef
+endif # SEPARATE_JOBS
+endif # IN
+define target-set
+$(eval $(call target-set-rule,$(1),$(2)))
+endef
+
+DATS_ch-test=\
+	ch_mesh-32_ranks-2_mapby-node.csv \
+
+$(call target-set,ch-test,$(DATS_ch-test))
+
+DATS_ch-node=\
+	ch_mesh-32_ranks-2_mapby-node.csv \
+	ch_mesh-96_ranks-2_mapby-node.csv \
+
+$(call target-set,ch-node,$(DATS_ch-node))
+
+# < 1 hr total
+DATS_ch-core-tiny=\
+	ch_mesh-96_ranks-2_mapby-core.csv \
+	ch_mesh-96_ranks-4_mapby-core.csv \
+	ch_mesh-96_ranks-8_mapby-core.csv \
+	ch_mesh-96_ranks-16_mapby-core.csv \
+	ch_mesh-96_ranks-32_mapby-core.csv \
+	ch_mesh-96_ranks-64_mapby-core.csv \
+	ch_mesh-128_ranks-8_mapby-core.csv \
+	ch_mesh-128_ranks-16_mapby-core.csv \
+	ch_mesh-128_ranks-32_mapby-core.csv \
+	ch_mesh-128_ranks-48_mapby-core.csv \
+	ch_mesh-128_ranks-64_mapby-core.csv \
+
+$(call target-set,ch-core-tiny,$(DATS_ch-core-tiny))
+
+# < 1 hr total
+DATS_ch-core-small=\
+	ch_mesh-256_ranks-8_mapby-core.csv \
+	ch_mesh-256_ranks-16_mapby-core.csv \
+	ch_mesh-256_ranks-32_mapby-core.csv \
+	ch_mesh-256_ranks-48_mapby-core.csv \
+	ch_mesh-256_ranks-64_mapby-core.csv \
+
+$(call target-set,ch-core-small,$(DATS_ch-core-small))
+
+# < 1 hr total
+DATS_ch-core-med=\
+	ch_mesh-512_ranks-16_mapby-core.csv \
+	ch_mesh-512_ranks-32_mapby-core.csv \
+	ch_mesh-512_ranks-48_mapby-core.csv \
+	ch_mesh-512_ranks-64_mapby-core.csv \
+
+$(call target-set,ch-core-med,$(DATS_ch-core-med))
+
+DATS_ch-core-large=\
+	ch_mesh-1024_ranks-32_mapby-core.csv \
+	ch_mesh-1024_ranks-48_mapby-core.csv \
+	ch_mesh-1024_ranks-64_mapby-core.csv \
+	ch_mesh-1536_ranks-128_mapby-core.csv \
+	ch_mesh-1536_ranks-192_mapby-core.csv \
+	ch_mesh-1536_ranks-256_mapby-core.csv \
+	ch_mesh-2048_ranks-256_mapby-core.csv \
+	ch_mesh-2048_ranks-320_mapby-core.csv \
+	ch_mesh-2048_ranks-384_mapby-core.csv \
+	ch_mesh-2048_ranks-512_mapby-core.csv \
+	ch_mesh-2048_ranks-1024_mapby-core.csv \
+	ch_mesh-2048_ranks-2048_mapby-core.csv \
+	ch_mesh-4096_ranks-512_mapby-core.csv \
+	ch_mesh-4096_ranks-1024_mapby-core.csv \
+	ch_mesh-4096_ranks-2048_mapby-core.csv \
+	ch_mesh-8192_ranks-1024_mapby-core.csv \
+	ch_mesh-8192_ranks-2048_mapby-core.csv \
+	ch_mesh-8192_ranks-4096_mapby-core.csv \
+	ch_mesh-8192_ranks-8192_mapby-core.csv \
+	ch_mesh-16384_ranks-8192_mapby-core.csv \
+
+$(call target-set,ch-core-large,$(DATS_ch-core-large))
+
+DATS_ch-core=\
+	$(DATS_ch-core-tiny) $(DATS_ch-core-small) \
+	$(DATS_ch-core-med) $(DATS_ch-core-large)
+$(call target-set,ch-core,$(DATS_ch-core))
+
+# TODO: 512 scales only up to 48 nodes, so might want to use mesh 1024
+DATS_ch-ppr-node=\
+	ch_mesh-1024_ranks-64_mapby-ppr-8-node.csv \
+	ch_mesh-1024_ranks-64_mapby-ppr-16-node.csv \
+	ch_mesh-1024_ranks-64_mapby-ppr-32-node.csv \
+	ch_mesh-1024_ranks-64_mapby-ppr-48-node.csv \
+	ch_mesh-1024_ranks-64_mapby-ppr-64-node.csv \
+
+$(call target-set,ch-ppr-node,$(DATS_ch-ppr-node))
+
+# Hints
+$(DATA_DIR)/ch-mesh_512-%.csv: MAX_TIME_MIN=30
+$(DATA_DIR)/ch-mesh_1024-%.csv: MAX_TIME_MIN=45
+
+DEFINE:=define
+define BC_FUNCS
+$(DEFINE) ceil(x) {
+  auto os,xx;x=-x;os=scale;scale=0
+  xx=x/1;if(xx>x).=xx--
+  scale=os;return(-xx)
+}
+scale=4;
+endef
+define calc
+$(strip $(shell echo '$(BC_FUNCS)' '$(1)' | bc))
+endef
+define max
+$(strip $(shell echo '$(1)' | xargs -n 1 echo | sort -nr | head -1))
+endef
+
+define is-dbg-q
+$(findstring debug,$(QUEUE_ARG))
+endef
+
+# dat/foo+bar --> foo
+define first-tgt
+$(firstword $(subst +, ,$(firstword $(1))))
+endef
+
+# tgt-extract(key, target_name) -> value
+define tgt-extract
+$(strip $(subst $(1)-,,$(filter $(1)-%,$(subst _, ,$(subst ., ,$(2))))))
+endef
+
+define gen-map-by
+$(subst -,:,$(1))$(if $(NOLOCAL),:NOLOCAL)
+endef
+
+# tgt-tasks-per-node(target_name)
+# Extracts N from ppr-N within the target name
+define tgt-tasks-per-node
+$(strip $(if $(findstring mapby-ppr-,$(1)),\
+	$(word 2,$(subst -, ,$(call tgt-extract,mapby,$(1)))),\
+	$(if $(findstring mapby-node,$(1)),\
+		1,\
+		$(if $(findstring mapby-core,$(1)),\
+			$(MAX_SLOTS_PER_NODE),\
+			$(error Cannot determine tasks-per-node from mapby for $(1))))))
+endef
+
+# tgt-nodes(target_name) -> node count (from: ranks/tasks_per_node)
+define tgt-nodes
+$(call calc,ceil($(call tgt-extract,ranks,$(1)) / $(call tgt-tasks-per-node,$(1))))
+endef
+define cap-job-nodes
+$(if $(call is-dbg-q),\
+	$(if $(filter 1,$(call calc,$(1) <= $(DBG_Q_MAX_NODES))),\
+		$(1),$(error Debug queue allows only up to $(DBG_Q_MAX_NODES) nodes)),\
+	$(if $(filter 1,$(call calc,$(MAIN_Q_MIN_NODES) < $(1))),\
+		$(1),$(MAIN_Q_MIN_NODES)))
+endef
+define job-nodes
+$(strip $(call cap-job-nodes,$(call max,\
+		$(foreach t,$(call split-targets,$(1)),\
+			$(call tgt-nodes,$(t))))))
+endef
+
+# Only one job at a time allowed in debug queue and only one concurrent
+# execution of mpirun allowed per job (regardless of which queue), since
+# only one workload can run on the same set of resources for measurement.
+# TODO: does mpirun accept multiple invocations in the same job
+# allocations, and partition resources among the invocations?
+ifneq ($(or $(IN),$(call is-dbg-q)),)
+.NOTPARALLEL:
+endif
+
+ifeq ($(IN),1)
+$(DATA_DIR)/ch_%.csv:
+	mpirun -n "$(call tgt-extract,ranks,$*)" \
+		--map-by "$(call gen-map-by,$(call tgt-extract,mapby,$*))" \
+		$(MPIRUN_ARGS) $(MPIRUN_TP_ARGS) \
+		env OMP_NUM_THREADS=$(OMP_NUM_THREADS) \
+		bash $(PWD)/fch.sh "$(call tgt-extract,mesh,$*)" \
+			"$(call tgt-extract,ranks,$*)" \
+			"$(call tgt-tasks-per-node,$*)" --elapsed-out "$@"
+		2>&1 | tee "$@.log"
+else # IN=0
+# Accepts multiple targets in a single job: make dat/foo.log+bar.log
+# Re JOB_NAME: Ideally we would just use the top-level target name, but
+# when multiple targets are combined into one job, the top-level target
+# name gets too long.
+.ONESHELL:
+$(DATA_DIR)/%: | $(DATA_DIR)/
+	JOB_NAME="$(DATA_DIR)/job.$$(date +%Y%m%d%H%M%S).$$$$"
+	echo $@ > $${JOB_NAME}.tgt
+	rm -f $${JOB_NAME}.{cobaltlog,output,error}
+	touch $${JOB_NAME}.{cobaltlog,output,error}
+	qsub -O "$${JOB_NAME}" \
+		-n "$(or $(NODES),$(call job-nodes,$(or $(DEPS),$*)))" \
+		-t "$(MAX_TIME_MIN)" -A "$(ACCOUNT)" \
 		$(if $(SSH),--attr enable_ssh=1) \
-		$$([[ "$(NODES)" -lt 128 ]] && echo -q $(DEBUG_Q)) \
-		$$(which make) -C $${PWD} EPREFIX=$(EPREFIX) \
-		NODES="$(NODES)" MCA_ARGS="$(MCA_ARGS)" MPIRUN_ARGS="$(MPIRUN_ARGS)" \
-		$*
-	tail -f $*.log.{cobaltlog,output,error}
+		$(if $(QUEUE_ARG),-q $(QUEUE_ARG)) \
+		$(EPREFIX)/startprefix -c \
+		"make -C $(CURDIR) IN=1 DATA_DIR=$(DATA_DIR) \
+		MPIRUN_ARGS='$(MPIRUN_ARGS)' VERBOSE=$(VERBOSE) \
+		$(patsubst %,$(DATA_DIR)/%,$(subst +, ,$*))"
+	$(if $(BLOCK),,exit 0 &&) \
+		tail -f $${JOB_NAME}.{cobaltlog,output,error}
 
 job:
-	qsub -n "$(NODES)" -t "$(MAX_TIME_MIN)" -A "$(ACCOUNT)" \
-		-q "$(DEBUG_Q)" --attr enable_ssh=1 -I
+	qsub -n "$(or $(NODES),2)" -t "$(MAX_TIME_MIN)" -A "$(ACCOUNT)" \
+		$(if $(QUEUE_ARG),-q $(QUEUE_ARG)) \
+		$(QSUB_ARGS) --attr enable_ssh=1 -I
 .PHONY: job
+endif # IN
