exp/ch/theta: dir for path to prefix tools

--- a/exp/cahn-hilliard/theta/Makefile
+++ b/exp/cahn-hilliard/theta/Makefile
@@ -12,6 +12,7 @@ MAKEFLAGS+=--keep-going
 # default also varies by rank count -- the default is a mess.
 OMP_NUM_THREADS?=1
 
+PTOOLS:=$(EPREFIX)/ptools
 # 0 max time means maximum allowed
 MAX_TIME?=
 ACCOUNT?=CASPER
@@ -263,7 +264,7 @@ $(DATA_DIR)/%: | $(DATA_DIR)/
 	echo JOB_NAME=$${JOB_NAME}
 	echo $@ > $${JOB_NAME}.tgt
 	MONITOR=$(MONITOR) SUPPRESS_RC=$(SUPPRESS_RC) \
-	$(EPREFIX)/ptools/pqsub -O "$${JOB_NAME}" -A "$(ACCOUNT)" \
+	$(PTOOLS)/pqsub -O "$${JOB_NAME}" -A "$(ACCOUNT)" \
 		-n "$(call job-nodes-arg,$*)" -t "$(call max-time-arg,$*)" \
 		$(if $(SSH),--attr enable_ssh=1) \
 		$(if $(QUEUE_ARG),-q $(QUEUE_ARG)) \
