--- a/exp/cahn-hilliard/theta/Makefile
+++ b/exp/cahn-hilliard/theta/Makefile
@@ -275,7 +275,7 @@ $(DATA_DIR)/%: | $(DATA_DIR)/
 		$(patsubst %,$(DATA_DIR)/%,$(subst +, ,$*))
 
 job:
-	qsub -n "$(or $(NODES),2)" -t "$(MAX_TIME_MIN)" -A "$(ACCOUNT)" \
+	qsub -A "$(ACCOUNT)" -n "$(or $(NODES),2)" -t "$(MAX_TIME)" \
 		$(if $(QUEUE_ARG),-q $(QUEUE_ARG)) \
 		$(QSUB_ARGS) --attr enable_ssh=1 -I
 .PHONY: job
