exp/ch/theta: depend on data dir being created

--- a/exp/cahn-hilliard/theta/Makefile
+++ b/exp/cahn-hilliard/theta/Makefile
@@ -220,7 +220,7 @@ ifneq ($(or $(IN),$(call is-dbg-q)),)
 endif
 
 ifneq ($(IN),)
-$(DATA_DIR)/ch_%.csv:
+$(DATA_DIR)/ch_%.csv: | $(DATA_DIR)/
 	set -o pipefail; \
 	mpirun -n "$(call tgt-extract,ranks,$*)" \
 		--map-by "$(call gen-map-by,$(call tgt-extract,mapby,$*))" \
